--- a/summary.css
+++ b/summary.css
@@ -126,18 +126,19 @@ display: inline-block; /* Allows for margin on the bottom */
 margin-bottom: 10px;
 }
 
-footer.contact-section {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+
+.custom-image-size {
+    width: auto; /* Adjust to the desired width */
+    height: 400px; /* Keeps the aspect ratio */
 }
 
-/* Emotion Detection Section Styling */
 .scooter-summary-section .section-title {
     font-size: 2em;
     font-weight: bold;
     letter-spacing: 0.1em;
     text-transform: uppercase;
+    margin-top: 20px;
+    
 }
 
 .scooter-summary-section .section-divider {
@@ -172,9 +173,28 @@ cursor: pointer;
 }
 
 
+html, body {
+    height: 100%;
+    scroll-behavior: smooth; /* Smooth Scrolling */
+    margin:0;
+    
+}
 
-/* Smooth Scrolling */
-html {
-scroll-behavior: smooth;
 
+/* Margin to prevent content from being hidden behind the footer */
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex: 1;
+    padding-bottom: 100px; /* Espace pour ne pas masquer le contenu avec le footer */
+}
+
+footer.contact-section {
+    width: 100%;
+    background-color: #343a40;
+    padding: 1.5rem 0;
 }
